Fix login layout bug where card pushed to right

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -82,10 +82,7 @@
   z-index: 0;
 }
 
-.login-mesh-bg > * {
-  position: relative;
-  z-index: 1;
-}
+
 
 
 @keyframes pulse-glow {
